[vistas para asignar gerencia]